<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageW"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_w"
        android:src="@drawable/w"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageWeather"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/logo_weather"
        android:src="@drawable/weather"
        app:layout_constraintBottom_toBottomOf="@id/imageW"
        app:layout_constraintStart_toEndOf="@id/imageW"
        app:layout_constraintTop_toTopOf="@id/imageW"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/imageApp"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="-8dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/app"
        app:layout_constraintStart_toStartOf="@id/imageWeather"
        app:layout_constraintTop_toBottomOf="@id/imageWeather" />

</androidx.constraintlayout.widget.ConstraintLayout>